--- a/index.html
+++ b/index.html
@@ -582,13 +582,13 @@ body {
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="img/123.png" style="width:100%">
+          <img src="123.jpg" style="width:100%">
           <div class="text">Caption Text</div>
         </div>
         
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
-          <img src="img/Koala.jpg" style="width:100%">
+          <img src="Koala.jpg" style="width:100%">
           <div class="text">Caption Two</div>
         </div>
         
