--- a/timex.html
+++ b/timex.html
@@ -51,7 +51,7 @@
 <div class="cd" >
 
 <div class="card">
-  <img src="img/tmt2.jpg" alt="watch" style="width:100%">
+  <img src="/img/tmt2.jpg" alt="watch" style="width:100%">
   <h1> Timex TWO32HL34</h1>
 
   <p>₹2195</p>
