--- a/timex.html
+++ b/timex.html
@@ -60,7 +60,15 @@
   <p><button>Add to Cart</button></p>
 </div>
 
-
+<div class="card">
+      <img src="y29.jpg" alt="Vivo" style="width:100%">
+      <h1></h1>
+      <p class="price">11499</p>
+      <p>4GB Ram 128 GB Rom</p>
+      <p>Dimensity 6300 processor</p>
+      <p><button>Buy Now</button></p>
+      <p><button>Add to Cart</button></p>
+    </div>
 
   
 </div>
