--- a/fastrack.html
+++ b/fastrack.html
@@ -56,6 +56,202 @@
 
   <p>₹2195</p>
   
-  <p><button>Buy Now</button></p>
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
   <p><button>Add to Cart</button></p>
 </div>
+
+    <div class="card">
+  <img src="2.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+
+    <div class="card">
+  <img src="3.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+
+    <div class="card">
+  <img src="4.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="5.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="6.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="7.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="8.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="9.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="10.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="11.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="12.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="13.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="14.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="15.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="16.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="17.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="18.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="19.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="20.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    
+<div class="card">
+  <img src="21.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+    <div class="card">
+  <img src="22.jpg" alt="watch" style="width:100%">
+  <h1> Fastrack</h1>
+
+  <p>₹2195</p>
+  
+    <p><button class="bt1"> <a href="buy.html">BUY NOW</a></button></p>
+  <p><button>Add to Cart</button></p>
+</div>
+</div>
+</body>
+</html>
