--- a/index.html
+++ b/index.html
@@ -770,14 +770,31 @@ button:hover {
           <!-- Photo Grid -->
           <div class="row"> 
             <div class="column">
-              <img src="Koala.jpg" style="width:100%">
+              <img src="s4.jpg" style="width:100%">
 
             </div>
             <div class="column">
-              <img src="Jellyfish.jpg" style="width:100%">>
+              <img src="s5.jpg" style="width:100%">>
             </div>  
             <div class="column">
-              <img src="Lighthouse.jpg" style="width:100%">
+              <img src="s7.jpg" style="width:100%">
+            </div>
+
+            </div>
+          </div>
+
+      
+          <!-- Photo Grid -->
+          <div class="row"> 
+            <div class="column">
+              <img src="s8.jpg" style="width:100%">
+
+            </div>
+            <div class="column">
+              <img src="s9.jpg" style="width:100%">>
+            </div>  
+            <div class="column">
+              <img src="s2.jpg" style="width:100%">
             </div>
 
             </div>
