--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 /* Style the header with a grey background and some padding */
 .header {
   overflow: hidden;
-  background-color: #0ef1d3;
+  background-color:  #ddd2d2;
   padding: 0px 0px 0px;
 }
 
@@ -40,7 +40,7 @@
 
 /* Style the active/current link*/
 .header a.active {
-  background-color: rgb(228, 24, 24);
+  background-color: rgb(247, 109, 109);
   color: white;
 }
 
@@ -595,7 +595,7 @@ text-align: center;
 </head>
 
 <div class="header">
-        <img src="logo.png" />
+        <img src="Capture.PNG" />
         <div class="header-right">
             <a class="active" href="#home">Home</a>
             <a href="footer.html">About Us</a>
