--- a/index.html
+++ b/index.html
@@ -594,13 +594,12 @@ text-align: center;
     </style>
 </head>
 
-<div class="header">
-        <img src="Capture.PNG" />
-        <div class="header-right">
-            <a class="active" href="#home">Home</a>
-            <a href="footer.html">About Us</a>
-            <a href="login.html">Log-in</a>
-          </div>
+<div class="header-right">
+  <div style="font-family:Monotype Corsiva, Times, Serif;  ; height:25px;font-size: 40px;text-align: center;">
+
+  <h1 >G.P.Singapore Shop</h1>
+
+</div>
 </div>
 
   
