--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@ button:hover {
     display: flex; /* or display: grid; with grid-template-columns */
     justify-content: space-around; /* Distributes items evenly */
     align-items: center; /* Vertically aligns items */
-    padding: 20px;
-    background-color: #f0f0f0; /* Example background color */
+    padding: 100px;
+    background-color: #ead4ee; 
 }
 
 .stat-item {
@@ -424,25 +424,31 @@ button:hover {
 }
 
 .over-text {
-    font-size: 14px;
-    color: #555;
+    font-size: 30px;
+    color: rgb(48, 45, 45);
     text-transform: uppercase;
+    font-family: Monotype Corsiva, Times, Serif;
+    font-weight: 700;
 }
 
 .number {
-    font-size: 48px; /* Adjust as needed */
+    font-size: 50px; /* Adjust as needed */
     font-weight: bold;
-    color: #333;
+    color: rgb(241, 30, 30);
     margin-top: 5px;
     margin-bottom: 5px;
+    font-family: Monotype Corsiva, Times, Serif;
+
 }
 
 .description {
-    font-size: 16px;
-    color: #777;
+    font-size: 35px;
+    color: rgb(2, 2, 2);
     text-transform: uppercase;
-}
+    font-family: Monotype Corsiva, Times, Serif;
+    font-weight: 900;
 
+}
 
 
 
@@ -799,7 +805,7 @@ text-align: center;
     <div class="stats-container">
         <div class="stat-item">
             <p class="over-text">OVER</p>
-            <p class="number">1000+</p>
+            <p class="number">7000+</p>
             <p class="description">CUSTOMERS</p>
         </div>
         <div class="stat-item">
