--- a/index.html
+++ b/index.html
@@ -540,7 +540,10 @@ text-align: center;
 }
 
 
-        
+  
+.video{
+            padding: 20px;
+        }      
     </style>
 </head>
 
@@ -802,6 +805,23 @@ text-align: center;
             </div>
           </div>
 
+
+
+
+        <div class="video">
+        <video id="myVideo" height="400" width="420" autoplay onended="run();">   
+            <source id="ss"  src="reno14.mp4" type='video/mp4'>
+        </video>
+        <video id="myVideo" height="400" width="420" autoplay onended="run();">   
+            <source id="ss"  src="x200fe.mp4" type='video/mp4'>
+        </video>
+        <video id="myVideo" height="400" width="420" autoplay onended="run();">   
+            <source id="ss"  src="fold7.mp4" type='video/mp4'>
+        </video>
+    </div>
+
+
+    
     <div class="stats-container">
         <div class="stat-item">
             <p class="over-text">OVER</p>
