--- a/index.html
+++ b/index.html
@@ -762,6 +762,18 @@ text-align: center;
           </div>
 
 
+        <div class="video">
+        <video id="myVideo" height="400" width="420" autoplay onended="run();">   
+            <source id="ss"  src="reno14.mp4" type='video/mp4'>
+        </video>
+        <video id="myVideo" height="400" width="420" autoplay onended="run();">   
+            <source id="ss"  src="x200fe.mp4" type='video/mp4'>
+        </video>
+        <video id="myVideo" height="400" width="420" autoplay onended="run();">   
+            <source id="ss"  src="fold7.mp4" type='video/mp4'>
+        </video>
+    </div>
+
 
 
 
