--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="fold.jpg" style="width:100%">
+  <img src="x200.jpg" style="width:100%">
 </div>
 
 <div class="mySlides fade">
